--- a/bookinfo-index.html
+++ b/bookinfo-index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-  		<title>Test</title>
+  		<title>Book Information Lookup</title>
   		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
@@ -12,16 +12,17 @@
 		<input type="radio" name="type" value="inauthor">author
 		<input type="radio" name="type" value="inpublisher">publisher
 		<div id="result-pane">
+			<!-- result panel -->
 			<div id="result"></div>
+			<!-- hide the elements at first -->
 			<button class="pagination" id="previous-page" style="display:none">Previous page</button>
 			<button class="pagination" id="next-page" style="display:none">Next page</button>
 		</div>
-		
 		<div class="script">
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 			<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-			<script src="http://malsup.github.com/jquery.form.js"></script> 
+			<script src="http://malsup.github.com/jquery.form.js"></script>
+			<script src="bookinfo.js"></script> 
 		</div>
-		<script src="bookinfo.js"></script>
 	</body>
 </html>
